[package]
name = "pgextract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
openssl = "0.10.64"
postgres = "0.19.7"
postgres-openssl = "0.5.0"
regex = "1.10.3"
