[package]
name = "pgextract"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
native-tls = { version = "0.2.11", features = ["vendored"] }
postgres = "0.19.7"
postgres-native-tls = "0.5.0"
regex = "1.10.3"
